Greatly reduced image size for optimization

--- a/About.html
+++ b/About.html
@@ -66,7 +66,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-7">
+                                    <div class="col-lg-7">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
@@ -76,7 +76,7 @@
                                         </ul>
                                     </div>
 
-                                    <div class="col-md-5 mt-4 mt-md-0">
+                                    <div class="col-lg-5 mt-4 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="index.html#3D">3D assets</a></li>
