--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -66,7 +66,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
+                                    <div class="col-lg-7">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
@@ -76,7 +76,7 @@
                                         </ul>
                                     </div>
 
-                                    <div class="col-md-5 mt-4 mt-md-0">
+                                    <div class="col-lg-5 mt-4 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#illustrations#3D">3D assets</a></li>
@@ -180,40 +180,34 @@
                             </p>
                         </div>
                         <div class="py-1 py-lg-4">
-                            <p>
-                                <b>Goals & Needs:</b>
-                                <ul>
-                                    <li>College funds for the kids</li>
-                                    <li>Retirement</li>
-                                    <li>Passive income investment</li>
-                                    <li>Estate and Wills</li>
-                                </ul>
-                            </p>
+                            <p class="mb-2"><b>Goals & Needs:</b></p>
+                            <ul>
+                                <li>College funds for the kids</li>
+                                <li>Retirement</li>
+                                <li>Passive income investment</li>
+                                <li>Estate and Wills</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-11 col-md-8 col-lg-4 mx-auto">
-                        <img data-src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
+                        <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
                     </div>
                     <div class="order-2 order-lg-2 col-lg-4 align-items-center my-auto">
                         <div class="py-1 py-lg-4">
-                            <p>
-                                <b>Pain Points:</b>
-                                <ul>
-                                    <li>Funds locked up for at least 2 years depending on terms</li>
-                                    <li>Best way to invest without too much research</li>
-                                    <li>Inflation outweighs interest rate</li>
-                                </ul>
-                            </p>
+                            <p class="mb-2"><b>Pain Points:</b></p>
+                            <ul>
+                                <li>Funds locked up for at least 2 years depending on terms</li>
+                                <li>Best way to invest without too much research</li>
+                                <li>Inflation outweighs interest rate</li>
+                            </ul>
                         </div>
                         <div class="py-1 py-lg-4">
-                            <p>
-                                <b>Solutions & Gains</b>
-                                <ul>
-                                    <li>Avoid middle-man fee</li>
-                                    <li>Has direct control of his investments</li>
-                                    <li>Tax benefits</li>
-                                </ul>
-                            </p>
+                            <p class="mb-2"><b>Solutions & Gains</b></p>
+                            <ul>
+                                <li>Avoid middle-man fee</li>
+                                <li>Has direct control of his investment</li>
+                                <li>Tax benefits</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -222,13 +216,13 @@
                 <div class="mt-5 mb-lg-5 pt-0 pt-lg-5">
                     <p class="pt-3 pt-lg-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
                 </div>
-                <img data-src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
+                <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
                 
                 <!-- Heuristic eval -->
                 <div class="mt-5 pt-0 pt-lg-5">
                     <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
                 </div>
-                <img data-src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
+                <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
             </div>
         </section>
 
@@ -246,7 +240,7 @@
                     </h6>
                     <div class="d-flex justify-content-between mb-lg-5 pb-5 row">
                         <div class="col-md-6">
-                            <p>Some of the major areas that can be improved:</p>
+                            <p class="mt-2 mt-lg-0">Some of the major areas that can be improved:</p>
                             <ul>
                                 <li>Too much information</li>
                                 <li>Tight spacing/hard to read</li>
@@ -256,7 +250,7 @@
                             </ul>
                         </div>
                         <div class="col-md-5 px-5 px-md-0 mt-3 mt-md-0">
-                            <img data-src="../assets/img/UX_TD/UX_TD_NavEval.png" alt="" class="img-fluid shadow">
+                            <img src="../assets/img/UX_TD/UX_TD_NavEval.png" alt="" class="img-fluid shadow">
                         </div>
                     </div>
 
@@ -264,12 +258,12 @@
                     <h6 class="playFair mb-3 mb-lg-4 pb-lg-3 pt-5">
                         We conducted usablity tests regarding navigation.
                     </h6>
-                    <div class="d-flex justify-content-between mb-lg-5 pb-5">
+                    <div class="d-md-flex justify-content-between mb-lg-5 pb-5">
                         <div class="col-md-6">
                             <p>Using our research, we were able to identify the main problems in navigation and what our users expect while on the site. With the current design, most users feel overwhelmed by the sheer amount of information. After identifying our issues, we completed a <b>feature prioritization matrix</b>, grouping features into 4 categories of <b>Must Have, Could Have, Should Have,</b> and <b>Won&apos;t Have.</b></p>
                         </div>
-                        <div class="col-md-5 opacity-75">
-                            <img data-src="../assets/img/UX_TD/undraw_visionary_technology_re_jfp7.svg" alt="" class="img-fluid imgSVG">
+                        <div class="col-10 mx-auto col-md-5 opacity-75">
+                            <img src="../assets/img/UX_TD/UX_TD_PrioritizationMatrix.jpg" alt="" class="img-fluid shadow">
                         </div>
                     </div>
 
@@ -277,7 +271,7 @@
                     <div class="col-lg-9 pt-lg-5">
                         <p>We also conducted <b>Card Sorting</b> activity with users to identify like-groups of content for users to navigate through.</p>
                     </div>
-                    <img data-src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="" class="img-fluid">
+                    <img src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -286,14 +280,14 @@
         <section style="padding: 9.375rem 0;" id="TD_Ideation">
             <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
-                    <h6 class="leadingLine text-nav text-muted mb-5 pb-5">
+                    <h6 class="leadingLine text-nav text-muted mb-5">
                         Ideation
                     </h6>
-                    <div class="pt-5">
+                    <div>
                         <p>Using our card sorting results, we redesigned the new <b>sitemap navigation</b>. To simplify the homepage, we moved links to specific pages to the footer.</p>
                     </div>
                     <div class="pb-lg-5 mb-lg-5">
-                        <img data-src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="" class="img-fluid">
+                        <img src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="" class="img-fluid">
                     </div>
 
                     <!-- UI Style Guide -->
@@ -301,7 +295,7 @@
                         <p>We were able to create a new navigation header and footer using the updated sitemap. Creating a moodboard in Invision led us to identify common color palettes used for a government site and helped us determine how to approach our new design. We created a <b>U.I. style tile</b> with our ideas of a color palette, gradients, typography, iconography, and button styles and states.</p>
                     </div>
                     <div class="shadow">
-                        <img data-src="../assets/img/UX_TD/UX_TD_UIStyleGuide.png" alt="" class="img-fluid">
+                        <img src="../assets/img/UX_TD/UX_TD_UIStyleGuide.png" alt="" class="img-fluid">
                     </div>
                     
                 </div>
@@ -312,18 +306,18 @@
         <section id="TD_Prototyping">
             <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
-                    <h6 class="leadingLine text-nav text-muted pb-5 mb-5">
+                    <h6 class="leadingLine text-nav text-mutedmb-5">
                         Prototyping
                     </h6>
 
                     <!-- Prototypes -->
-                    <div class="mt-5 py-lg-5">
+                    <div class="pt-lg-5 pb-4">
                         <p>
                             Starting in Figma with a <b>low-fidelity wireframes</b> let us experiment with the layout until we finalized our ideas into a cohesive design. Updating our wireframes with contents from our style tile and adding images, we were able to form our redesign into its <b>high-fidelity</b> point.
                         </p>
                     </div>
                     <div class="pb-5 mb-5">
-                        <img data-src="../assets/img/UX_TD/UX_TD_Prototypes.png" alt="" class="img-fluid">
+                        <img src="../assets/img/UX_TD/UX_TD_Prototypes.png" alt="" class="img-fluid">
                     </div>
 
                     <!-- 5 second user test -->
@@ -343,9 +337,9 @@
                             </ul>
                         </div>
                         <div class="col-md-5 px-3 opacity-75">
-                            <img data-src="../assets/img/UX_TD/undraw_season_change_f99v.svg" alt="" class="img-fluid imgSVG">
+                            <img src="../assets/img/UX_TD/undraw_season_change_f99v.svg" alt="" class="img-fluid imgSVG">
                         </div>
-                        <p class="mt-3 pt-lg-5"><b>Revisions based on test feedbacks:</b></p>
+                        <div class="fw-bold mt-5 mt-lg-4">Revisions based on test feedbacks:</div>
                         <div class="d-flex row">
                             <div class="col-md-6">
                                 <p class="mb-1">Mobile prototype:</p>
@@ -374,7 +368,7 @@
                     <h6 class="playFair mb-3 mb-lg-4 pb-lg-3 pt-lg-5">
                         We invited the testers back for more thorough testings after more revisions.
                     </h6>
-                    <p class="fw-bold">List of tasks for users:</p>
+                    <p class="fw-bold mb-0">List of tasks for users:</p>
                     <ol>
                         <li>What is your first impression of the homepage?</li>
                         <li>What are your thoughts about the navigation tools on the homepage?</li>
@@ -442,14 +436,14 @@
                             </h2>
                             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
                                 <div class="accordion-body py-4">
-                                    <h6>Follow along with these tasks</h6>
+                                    <p class="fw-bold">Follow along with these tasks</p>
                                     <ol>
                                         <li>Explore the Home page</li>
                                         <li>Navigate to Research Center page</li>
                                         <li>Navigate to "Learn about opening an account" page</li>
                                     </ol>
                                     <br>
-                                    <a target="_blank" href="https://www.figma.com/proto/pzVGkfYHWM7UydLYVAz9hF/T3-NavigationProto-(Copy)?page-id=301%3A82&node-id=742%3A2497&viewport=692%2C434%2C0.05&scaling=scale-down&starting-point-node-id=742%3A2497">Click here to browse the Figma Prototype</a>
+                                    <a target="_blank" href="https://www.figma.com/proto/pzVGkfYHWM7UydLYVAz9hF/T3-NavigationProto-(Copy)?page-id=301%3A82&node-id=742%3A2497&viewport=692%2C434%2C0.05&scaling=scale-down&starting-point-node-id=742%3A2497"><p>Click here to browse the Figma Prototype</p></a>
                                 </div>
                             </div>
                         </div>
@@ -463,7 +457,7 @@
                             </h2>
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlush">
                                 <div class="accordion-body py-4">
-                                    <h6>Follow along with these tasks</h6>
+                                    <p class="fw-bold">Follow along with these tasks</p>
                                     <ol>
                                         <li>Explore the Home page</li>
                                         <li>Navigate to Research Center page</li>
@@ -471,7 +465,7 @@
                                         <li>Easter egg: Click on "last updated" at the bottom of the homepage</li>
                                     </ol>
                                     <br>
-                                    <a target="_blank" href="https://www.figma.com/proto/pzVGkfYHWM7UydLYVAz9hF/T3-NavigationProto-(Copy)?page-id=562%3A138&node-id=562%3A824&viewport=-691%2C2706%2C0.19&scaling=scale-down&starting-point-node-id=562%3A824">Click here to browse the Figma Prototype</a>
+                                    <a target="_blank" href="https://www.figma.com/proto/pzVGkfYHWM7UydLYVAz9hF/T3-NavigationProto-(Copy)?page-id=562%3A138&node-id=562%3A824&viewport=-691%2C2706%2C0.19&scaling=scale-down&starting-point-node-id=562%3A824"><p>Click here to browse the Figma Prototype</p></a>
                                 </div>
                             </div>
                         </div>
