--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-7">
+                                    <div class="col-lg-7">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
@@ -71,7 +71,7 @@
                                         </ul>
                                     </div>
     
-                                    <div class="col-md-5 mt-3 mt-md-0">
+                                    <div class="col-lg-5 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="#3D">3D assets</a></li>
@@ -228,30 +228,30 @@
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201901_AC_Ace1959_03_B.jpg" data-caption="1959 AC Ace">
                                 <img src="./assets/img/Illustrations/3D/201901_AC_Ace1959_03_B_TN.jpg">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_02.png" data-caption="2005 Aston Martin DB9">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_02.jpg" data-caption="2005 Aston Martin DB9">
                                 <img src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_02_TN.png">
                             </a>
                         </div>
                         <div class="pictures3Db">
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO.png" data-caption="2005 Aston Martin DB9">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO.jpg" data-caption="2005 Aston Martin DB9">
                                 <img src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_01.png" data-caption="2005 Aston Martin DB9">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_01.jpg" data-caption="2005 Aston Martin DB9">
                                 <img src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_01_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_03.png" data-caption="2005 Aston Martin DB9">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_03.jpg" data-caption="2005 Aston Martin DB9">
                                 <img src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_03_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_04.png" data-caption="2005 Aston Martin DB9">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_04.jpg" data-caption="2005 Aston Martin DB9">
                                 <img src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_04_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_A.png" data-caption="Interior Design">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_A.jpg" data-caption="Interior Design">
                                 <img src="./assets/img/Illustrations/3D/201606_Interior_A_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_C.png" data-caption="Interior Design">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_C.jpg" data-caption="Interior Design">
                                 <img src="./assets/img/Illustrations/3D/201606_Interior_C_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_D.png" data-caption="Interior Design">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_D.jpg" data-caption="Interior Design">
                                 <img src="./assets/img/Illustrations/3D/201606_Interior_D_TN.png">
                             </a>
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_B.jpg" data-caption="Interior Design">
@@ -260,22 +260,22 @@
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_01.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201108_Unreal_01_TN.jpg">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_02.png" data-caption="Unreal Game Asset Creation">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_02.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201108_Unreal_02_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_03.png" data-caption="Unreal Game Asset Creation">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_03.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201108_Unreal_03_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_04.png" data-caption="Unreal Game Asset Creation">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_04.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201108_Unreal_04_TN.png">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_05.png" data-caption="Unreal Game Asset Creation">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201108_Unreal_05.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201108_Unreal_05_TN.png">
                             </a>
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201505_1_orig.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201505_1_orig_TN.jpg">
                             </a>
-                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201505_2_orig.png" data-caption="Unreal Game Asset Creation">
+                            <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201505_2_orig.jpg" data-caption="Unreal Game Asset Creation">
                                 <img src="./assets/img/Illustrations/3D/201505_2_orig_TN.png">
                             </a>
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201805_Concept000.jpg" data-caption="Setup Concept - Corys 2018">
@@ -321,16 +321,16 @@
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="2D">2D illustrations</h4>
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#assets2D" aria-expanded="false" aria-controls="assets2D">2D Illustrations<span class="iconFA"></span></button>
                     <div class="row px-0 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="assets2D">
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.jpg" data-caption="San Francisco Municipal Transportation Agency">
                             <img src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201708_MRS.png" data-caption="Utah Transit Authority">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201708_MRS.jpg" data-caption="Utah Transit Authority">
                             <img src="./assets/img/Illustrations/Others/201708_MRS_TN.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201802_MBTA.png" data-caption="Massachusetts Bay Transportation Authority">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201802_MBTA.jpg" data-caption="Massachusetts Bay Transportation Authority">
                             <img src="./assets/img/Illustrations/Others/201802_MBTA_TN.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201804_MIA.png" data-caption="Miami-Dade Transit">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201804_MIA.jpg" data-caption="Miami-Dade Transit">
                             <img src="./assets/img/Illustrations/Others/201804_MIA_TN.png">
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg" data-caption="Escher Imitation">
