temporary removed row class from illustration 2D

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <!-- 2D illustrations -->
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="2D">2D illustrations</h4>
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#assets2D" aria-expanded="false" aria-controls="assets2D">2D Illustrations<span class="iconFA"></span></button>
-                    <div class="row px-0 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="assets2D">
+                    <div class="px-0 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="assets2D">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.jpg" data-caption="San Francisco Municipal Transportation Agency">
                             <img src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
                         </a>
