--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                                 <a class="text-light text-opacity-75 fw-light" href="https://geekhack.org/index.php?topic=109511.0" data-tool-tip="https://geekhack.org/index.php?topic=109511.0" target="_blank">please click here.</a>
                             </h6>
                         </div>
-                        <div class="px-0 container-fluid picturesTrad">
+                        <div class="px-0 container-fluid pictures3Db">
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_01.jpg" data-caption="BoringBox CAD Drawing">
                                 <img data-src="./assets/img/Illustrations/CAD/202004_Box_01.jpg">
                             </a>
@@ -429,7 +429,7 @@
 
                     <!-- Omron 75 -->
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productO75" aria-expanded="false" aria-controls="productO75">Omron 75<span class="iconFA"></span></button>
-                    <div class="py-4 collapse d-md-block " id="productO75">
+                    <div class="py-4 collapse d-md-block px-0" id="productO75">
                         <div class="align-items-end">
                             <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
                             <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
@@ -437,7 +437,7 @@
                                 <a class="text-light text-opacity-75 fw-light" href="https://deskthority.net/viewtopic.php?t=22022" data-tool-tip="https://deskthority.net/viewtopic.php?t=22022" target="_blank">please click here.</a>
                             </h6>
                         </div>
-                        <div class="px-0 container-fluid picturesTrad">
+                        <div class="px-0 container-fluid pictures3Db">
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_02.JPG" data-caption="Omron 75 CAD Drawing">
                                 <img data-src="./assets/img/Illustrations/CAD/201812_Omron75_02.JPG">
                             </a>
