--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
         <!-- Masthead-->
         <header class="hero-section">
                 <div class="d-flex row aboutMeTitle">
-                    <h1 class="fadeIn-1">3D/Product Designer</h1>
+                    <h1 class="fadeIn-1">UX/UI Product Designer</h1>
                     <h1 class="fadeIn-2">based in Orlando, Florida.</h1>
                 </div>
         </header>
